[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CSSRFileWriter"
version = "0.1.0"
description = "CSSR file writer for OVITO"
keywords = ["ovito", "ovito-extension"]
authors = [ { name="Tim" } ]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ovito >= 3.14.0",
]

[project.urls]
repository = "https://github.com/TimKruikemeijerTUe/CSSRFileWriter/"

[tool.setuptools.packages.find]
where = ["src"]
